add some routes
